--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pet homepage</title>
 
-    <link rel="Stylesheet" href="./CSS/Style.css">
+    <link rel="Stylesheet" href="./Style.css">
 
 </head>
 
